--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "downtube",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "main": "expo-router/entry",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "ytdl-native": "^4.8.7"
   }
 }
