--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "expo": "~50.0.7",
+    "expo-clipboard": "~5.0.1",
     "expo-constants": "~15.4.5",
     "expo-file-system": "~16.0.7",
     "expo-linking": "~6.2.2",
