--- a/package.json
+++ b/package.json
@@ -5,28 +5,36 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.1.6",
+    "@react-native/babel-preset": "*",
     "@types/react": "~18.2.45",
+    "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-clipboard": "~5.0.1",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.9",
     "expo-file-system": "~16.0.7",
     "expo-linking": "~6.2.2",
     "expo-navigation-bar": "~2.8.1",
     "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
+    "get-video-id": "^4.1.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "^16.6.0 || ^17.0.0 || ^18.0.0",
     "react-native": "0.73.4",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "13.6.4",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.3.0",
     "ytdl-native": "^4.8.7"
