--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --go",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.1.6",
     "@react-native/babel-preset": "*",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-clipboard": "~5.0.1",
