chore: add comments to clarify some types

--- a/app.json
+++ b/app.json
@@ -20,6 +20,6 @@
       },
       "package": "com.jhondesignee.downtube"
     },
-    "plugins": ["expo-router"]
+    "plugins": ["expo-router", "expo-screen-orientation"]
   }
 }
