--- a/package.json
+++ b/package.json
@@ -2,31 +2,33 @@
   "name": "downtube",
   "version": "0.0.1",
   "main": "expo-router/entry",
-  "private": true,
+  "license": "MIT",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "expo": "~50.0.7",
-    "expo-constants": "~15.4.5",
-    "expo-file-system": "~16.0.7",
-    "expo-linking": "~6.2.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-router": "~3.4.7",
-    "expo-status-bar": "~1.11.1",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.1.6",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.9",
+    "expo-constants": "^16.0.2",
+    "expo-file-system": "^17.0.1",
+    "expo-linking": "^6.3.1",
+    "expo-navigation-bar": "^3.0.4",
+    "expo-router": "^3.5.15",
+    "expo-status-bar": "^1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.3.0"
-  }
+    "typescript": "~5.3.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
