--- a/package.json
+++ b/package.json
@@ -11,24 +11,30 @@
   },
   "dependencies": {
     "@babel/core": "^7.24.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-env": "^7.24.6",
+    "@react-native/assets-registry": "^0.74.84",
     "@types/react": "~18.2.79",
     "expo": "^51.0.9",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
     "expo-file-system": "^17.0.1",
     "expo-linking": "^6.3.1",
-    "expo-navigation-bar": "^3.0.4",
+    "expo-navigation-bar": "~3.0.5",
     "expo-router": "^3.5.15",
+    "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "^1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "3.3.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "ytdl-native": "^4.8.7"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
